# printer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  format.sh
.github/workflows/: ci-workflow.yml
cmake/: coverage.cmake  install-rules.cmake  make-interface.cmake  make-static.cmake  pack-rules.cmake  testing.cmake
source/: CMakeLists.txt  main.cpp
source/logger/: CMakeLists.txt  console_logger.cpp  console_logger.hpp  logger.cpp  logger.hpp
source/printer/: CMakeLists.txt  printer.hpp  printer_test.cpp
source/traits/: CMakeLists.txt  traits.hpp  traits_test.cpp
source/version/: CMakeLists.txt  version.cpp  version.hpp  version_test.cpp
